Another layout bugfix for the WebLCMS (conflicting positioning of right menu and tool shortcuts || http://support.chamilo.org/issues/59)

--- a/layout/aqua/css/weblcms.css
+++ b/layout/aqua/css/weblcms.css
@@ -405,3 +405,12 @@ div.student_view
 	top: 5px;
 	/*float: right;*/
 }
+
+/************************
+ * Tool shortcut styles *
+ ************************/
+#tool_shortcuts
+{
+	float: right;
+	margin-bottom: 10px;
+}
